<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bookImageView"
        android:layout_width="422dp"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="152dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDetails_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="enter book name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImageView" />

    <EditText
        android:id="@+id/editTextDetails"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="enter author name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextDetails_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextDetails_extra"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginBottom="157dp"
        android:ems="10"
        android:hint="enter genre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImageView" />

    <EditText
        android:id="@+id/editTextDetails_extra2"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="enter year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDetails_extra" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="255dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>